# rotten

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  log.rs  logging.rs  main.rs  utils.rs
src/config/: symlink.rs
